updated for Java 17